# revisor-artigos-sl3v1

./: README.md  output_20241027_055009.yaml  pyproject.toml  report.md
db/7898ce4a-2465-4b21-a369-3acda6aa7c53/: index_metadata.pickle
src/revisor_artigos_sl3v1/: crew.py  main.py
src/revisor_artigos_sl3v1/config/: agents.yaml  tasks.yaml
src/revisor_artigos_sl3v1/resources/artigos_markdown/: artigo_Reconfiguration_of_uncertainty_Introducing_AI_for_prediction_of_mortality_at_the_emergency_department.md  artigo__Emerge__Relatório_Deep_Techs_Brasil_2024__1_.md
src/revisor_artigos_sl3v1/resources/yamls/: output_2408.15247v1 - AUTOGEN STUDIO A No-Code Developer Tool for Building and.yaml
